--- a/MVT_RamiroMolin/templates/template_todos.html
+++ b/MVT_RamiroMolin/templates/template_todos.html
@@ -19,7 +19,7 @@
                 <tr>
                     <td>
                         <ul>
-                            <li><span style="color:rgb(7, 7, 7)">{{f.name}} tiene {{f.age}} años y nació el  </span><span style="color:rgb(0, 26, 255)">{{f.birthday}} .</span></li>
+                            <li><span style="color:rgb(7, 7, 7)">{{f.name}} tiene {{f.age}} años y nació en  </span><span style="color:rgb(0, 26, 255)">{{f.birthday}} .</span></li>
                         </ul>
                     </td>
                     
